Tweaked the Garbage Collector in G1GC